hphp/hack/test/typecheck/fc_enum_18.php.rust_elab.exp
File "fc_enum_18.php", line 3, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
