hphp/hack/test/typecheck/fc_enum_18.php
<?hh

enum E : int as int {
  FOO = 1;
  BAR = 2;
  BAZ = self::FOO | self::BAR;
}
